# BirdCLEF-2025_Melspec

./: .gitignore  README.md  convert.py  convert.sh  pyproject.toml
configs/: cnn_v1.py  cnn_v3_rexnet.py  common.py  simple_cnn_v1.py
modules/: augmentations.py  dataset.py  head.py  inception_next_nano.py  make_delta.py  metrics.py  model.py  preprocess.py  sumix.py  utils.py
notebooks/: make_pretrain_metadata.ipynb  pretrain.ipynb  quantize.ipynb  train.ipynb  train_metadata_rich_2021.parquet  train_metadata_rich_2022.parquet  train_metadata_rich_2023.parquet  train_metadata_rich_2025.parquet
